...
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        android:textColor="#3F51B5"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TaskListRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.833"
        tools:ignore="MissingConstraints" />
...
        app:layout_constraintVertical_bias="0.363"
        app:srcCompat="@drawable/_098402"
        tools:ignore="MissingConstraints"
        tools:srcCompat="@drawable/_098402" />

    <Button
        android:id="@+id/AddTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:backgroundTint="#BA0F0F"
        android:textColor="#F9F5F8"
        android:text="@string/add_task"
...
        app:layout_constraintStart_toEndOf="@+id/AddTaskButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.641"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/settingsImageButton"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:backgroundTint="#9C3945"
        app:layout_constraintEnd_toEndOf="parent"
...
