...
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="task_3">Cleaning</string>
    <string name="task_2">Reading a book</string>
    <string name="task_1">Exercising</string>
    <string name="all_tasks">All Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="my_tasks">My Tasks</string>
    <string name="taskmaster">TaskMaster</string>
    <string name="settings_Button">Settings</string>
    <string name="backButton">Back</string>
    <string name="lorem_ipsum_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt, justo eget rhoncus fringilla, nunc orci vehicula erat, in auctor urna lorem vel justo. Praesent in cursus dui. Integer euismod leo vel arcu tincidunt, id varius odio posuere. Nullam eget quam et elit accumsan vehicula.</string>
    <string name="taskmasterHeadline">TaskMaster</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="current_username">Current Username: %s</string>
    <string name="task_title">Task Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Task</string>
</resources>
