//package com.example.taskmaster;
//
//
//import static androidx.test.espresso.Espresso.onData;
//import static androidx.test.espresso.Espresso.onView;
//import static androidx.test.espresso.Espresso.pressBack;
//import static androidx.test.espresso.action.ViewActions.click;
//import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
//import static androidx.test.espresso.action.ViewActions.longClick;
//import static androidx.test.espresso.action.ViewActions.pressImeActionButton;
//import static androidx.test.espresso.action.ViewActions.replaceText;
//import static androidx.test.espresso.assertion.ViewAssertions.matches;
//import static androidx.test.espresso.contrib.RecyclerViewActions.actionOnItemAtPosition;
//import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
//import static androidx.test.espresso.matcher.ViewMatchers.withClassName;
//import static androidx.test.espresso.matcher.ViewMatchers.withContentDescription;
//import static androidx.test.espresso.matcher.ViewMatchers.withId;
//import static androidx.test.espresso.matcher.ViewMatchers.withParent;
//import static androidx.test.espresso.matcher.ViewMatchers.withText;
//import static org.hamcrest.Matchers.allOf;
//import static org.hamcrest.Matchers.anything;
//import static org.hamcrest.Matchers.is;
//
//import android.view.View;
//import android.view.ViewGroup;
//import android.view.ViewParent;
//
//import androidx.test.espresso.DataInteraction;
//import androidx.test.espresso.ViewInteraction;
//import androidx.test.ext.junit.rules.ActivityScenarioRule;
//import androidx.test.ext.junit.runners.AndroidJUnit4;
//import androidx.test.filters.LargeTest;
//
//import org.hamcrest.Description;
//import org.hamcrest.Matcher;
//import org.hamcrest.TypeSafeMatcher;
//import org.hamcrest.core.IsInstanceOf;
//import org.junit.Rule;
//import org.junit.Test;
//import org.junit.runner.RunWith;
//
//@LargeTest
//@RunWith(AndroidJUnit4.class)
//public class newTeamEntityTest {
//
//    @Rule
//    public ActivityScenarioRule<MainActivity> mActivityScenarioRule =
//            new ActivityScenarioRule<>(MainActivity.class);
//
//    @Test
//    public void newTeamEntityTest() {
//        ViewInteraction appCompatImageButton = onView(
//                allOf(withId(R.id.settingsImageButton),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                6),
//                        isDisplayed()));
//        appCompatImageButton.perform(click());
//
//        ViewInteraction appCompatEditText = onView(
//                allOf(withId(R.id.UsernameEditText), withText("No username found"),
//                        childAtPosition(
//                                allOf(withId(R.id.SettingsActivity),
//                                        childAtPosition(
//                                                withId(android.R.id.content),
//                                                0)),
//                                3),
//                        isDisplayed()));
//        appCompatEditText.perform(longClick());
//
//        ViewInteraction appCompatEditText2 = onView(
//                allOf(withId(R.id.UsernameEditText), withText("No username found"),
//                        childAtPosition(
//                                allOf(withId(R.id.SettingsActivity),
//                                        childAtPosition(
//                                                withId(android.R.id.content),
//                                                0)),
//                                3),
//                        isDisplayed()));
//        appCompatEditText2.perform(longClick());
//
//        ViewInteraction appCompatEditText3 = onView(
//                allOf(withId(R.id.UsernameEditText), withText("No username found"),
//                        childAtPosition(
//                                allOf(withId(R.id.SettingsActivity),
//                                        childAtPosition(
//                                                withId(android.R.id.content),
//                                                0)),
//                                3),
//                        isDisplayed()));
//        appCompatEditText3.perform(longClick());
//
////        ViewInteraction linearLayout = onView(
////                allOf(withContentDescription("Select all"),
////                        childAtPosition(
////                                childAtPosition(
////                                        withContentDescription("floating_toolbar"),
////                                        1),
////                                3),
////                        isDisplayed()));
////        linearLayout.perform(click());
//
//        ViewInteraction appCompatEditText4 = onView(
//                allOf(withId(R.id.UsernameEditText), withText("No username found"),
//                        childAtPosition(
//                                allOf(withId(R.id.SettingsActivity),
//                                        childAtPosition(
//                                                withId(android.R.id.content),
//                                                0)),
//                                3),
//                        isDisplayed()));
//        appCompatEditText4.perform(replaceText("Balqees"));
//
//        ViewInteraction appCompatEditText5 = onView(
//                allOf(withId(R.id.UsernameEditText), withText("Balqees"),
//                        childAtPosition(
//                                allOf(withId(R.id.SettingsActivity),
//                                        childAtPosition(
//                                                withId(android.R.id.content),
//                                                0)),
//                                3),
//                        isDisplayed()));
//        appCompatEditText5.perform(closeSoftKeyboard());
//
//        ViewInteraction appCompatSpinner = onView(
//                allOf(withId(R.id.teamSpinner),
//                        childAtPosition(
//                                allOf(withId(R.id.SettingsActivity),
//                                        childAtPosition(
//                                                withId(android.R.id.content),
//                                                0)),
//                                6),
//                        isDisplayed()));
//        appCompatSpinner.perform(click());
//
//        DataInteraction appCompatCheckedTextView = onData(anything())
//                .inAdapterView(childAtPosition(
//                        withClassName(is("android.widget.PopupWindow$PopupBackgroundView")),
//                        0))
//                .atPosition(1);
//        appCompatCheckedTextView.perform(click());
//
//        ViewInteraction appCompatEditText6 = onView(
//                allOf(withId(R.id.UsernameEditText), withText("Balqees"),
//                        childAtPosition(
//                                allOf(withId(R.id.SettingsActivity),
//                                        childAtPosition(
//                                                withId(android.R.id.content),
//                                                0)),
//                                3),
//                        isDisplayed()));
//        appCompatEditText6.perform(pressImeActionButton());
//
//        ViewInteraction materialButton = onView(
//                allOf(withId(R.id.saveUserSettingsButton), withText("Save"),
//                        childAtPosition(
//                                allOf(withId(R.id.SettingsActivity),
//                                        childAtPosition(
//                                                withId(android.R.id.content),
//                                                0)),
//                                4),
//                        isDisplayed()));
//        materialButton.perform(click());
//
//        ViewInteraction appCompatImageButton2 = onView(
//                allOf(withId(R.id.backButton), withContentDescription("Back"),
//                        childAtPosition(
//                                allOf(withId(R.id.SettingsActivity),
//                                        childAtPosition(
//                                                withId(android.R.id.content),
//                                                0)),
//                                1),
//                        isDisplayed()));
//        appCompatImageButton2.perform(click());
//
//        ViewInteraction materialButton2 = onView(
//                allOf(withId(R.id.AddTaskButton), withText("Add Task"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                4),
//                        isDisplayed()));
//        materialButton2.perform(click());
//
//        ViewInteraction appCompatEditText7 = onView(
//                allOf(withId(R.id.taskTileEditText), withText("My Task"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                6),
//                        isDisplayed()));
//        appCompatEditText7.perform(replaceText(""));
//
//        ViewInteraction appCompatEditText8 = onView(
//                allOf(withId(R.id.taskTileEditText),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                6),
//                        isDisplayed()));
//        appCompatEditText8.perform(closeSoftKeyboard());
//
//        ViewInteraction appCompatEditText9 = onView(
//                allOf(withId(R.id.taskTileEditText),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                6),
//                        isDisplayed()));
//        appCompatEditText9.perform(click());
//
//        ViewInteraction appCompatEditText10 = onView(
//                allOf(withId(R.id.taskTileEditText),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                6),
//                        isDisplayed()));
//        appCompatEditText10.perform(replaceText("cooking3"), closeSoftKeyboard());
//
//        ViewInteraction appCompatSpinner2 = onView(
//                allOf(withId(R.id.addTaskStateSpinner),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                2),
//                        isDisplayed()));
//        appCompatSpinner2.perform(click());
//
//        DataInteraction materialTextView = onData(anything())
//                .inAdapterView(childAtPosition(
//                        withClassName(is("android.widget.PopupWindow$PopupBackgroundView")),
//                        0))
//                .atPosition(1);
//        materialTextView.perform(click());
//
//        ViewInteraction appCompatEditText11 = onView(
//                allOf(withId(R.id.taskTileEditText), withText("cooking3"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                6),
//                        isDisplayed()));
//        appCompatEditText11.perform(pressImeActionButton());
//
////        pressBack();
//
//        ViewInteraction appCompatSpinner3 = onView(
//                allOf(withId(R.id.addTaskTeamSpinner),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                3),
//                        isDisplayed()));
//        appCompatSpinner3.perform(click());
//
//        DataInteraction materialTextView2 = onData(anything())
//                .inAdapterView(childAtPosition(
//                        withClassName(is("android.widget.PopupWindow$PopupBackgroundView")),
//                        0))
//                .atPosition(0);
//        materialTextView2.perform(click());
//
//        ViewInteraction materialButton3 = onView(
//                allOf(withId(R.id.saveTaskButton), withText("Save"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                13),
//                        isDisplayed()));
//        materialButton3.perform(click());
//
//        ViewInteraction appCompatImageButton3 = onView(
//                allOf(withId(R.id.backButton), withContentDescription("Back"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                12),
//                        isDisplayed()));
//        appCompatImageButton3.perform(click());
//
//        ViewInteraction appCompatImageButton4 = onView(
//                allOf(withId(R.id.settingsImageButton),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                6),
//                        isDisplayed()));
//        appCompatImageButton4.perform(click());
//
//        ViewInteraction appCompatSpinner4 = onView(
//                allOf(withId(R.id.teamSpinner),
//                        childAtPosition(
//                                allOf(withId(R.id.SettingsActivity),
//                                        childAtPosition(
//                                                withId(android.R.id.content),
//                                                0)),
//                                6),
//                        isDisplayed()));
//        appCompatSpinner4.perform(click());
//
//        DataInteraction appCompatCheckedTextView2 = onData(anything())
//                .inAdapterView(childAtPosition(
//                        withClassName(is("android.widget.PopupWindow$PopupBackgroundView")),
//                        0))
//                .atPosition(0);
//        appCompatCheckedTextView2.perform(click());
//
//        ViewInteraction materialButton4 = onView(
//                allOf(withId(R.id.saveUserSettingsButton), withText("Save"),
//                        childAtPosition(
//                                allOf(withId(R.id.SettingsActivity),
//                                        childAtPosition(
//                                                withId(android.R.id.content),
//                                                0)),
//                                4),
//                        isDisplayed()));
//        materialButton4.perform(click());
//
//        ViewInteraction appCompatImageButton5 = onView(
//                allOf(withId(R.id.backButton), withContentDescription("Back"),
//                        childAtPosition(
//                                allOf(withId(R.id.SettingsActivity),
//                                        childAtPosition(
//                                                withId(android.R.id.content),
//                                                0)),
//                                1),
//                        isDisplayed()));
//        appCompatImageButton5.perform(click());
//
////        ViewInteraction recyclerView = onView(
////                allOf(withId(R.id.TaskListRecyclerView),
////                        childAtPosition(
////                                withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
////                                7)));
////        recyclerView.perform(actionOnItemAtPosition(0, click()));
//
//        ViewInteraction appCompatImageButton6 = onView(
//                allOf(withId(R.id.backButton), withContentDescription("Back"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                2),
//                        isDisplayed()));
//        appCompatImageButton6.perform(click());
//
//        ViewInteraction textView = onView(
//                allOf(withId(R.id.taskFragmentTextView), withText("cooking3"),
//                        withParent(withParent(IsInstanceOf.<View>instanceOf(android.widget.FrameLayout.class))),
//                        isDisplayed()));
//        textView.check(matches(withText("cooking3")));
//    }
//
//    private static Matcher<View> childAtPosition(
//            final Matcher<View> parentMatcher, final int position) {
//
//        return new TypeSafeMatcher<View>() {
//            @Override
//            public void describeTo(Description description) {
//                description.appendText("Child at position " + position + " in parent ");
//                parentMatcher.describeTo(description);
//            }
//
//            @Override
//            public boolean matchesSafely(View view) {
//                ViewParent parent = view.getParent();
//                return parent instanceof ViewGroup && parentMatcher.matches(parent)
//                        && view.equals(((ViewGroup) parent).getChildAt(position));
//            }
//        };
//    }
//}
